# plojo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  check.sh  pre-commit.sh  run_tests.sh
.githooks/: pre-commit
cli/: Cargo.toml
cli/runtime_files/: default_config.toml  fingerspelling-RBGS.json  fingerspelling.json  modifiers-single-stroke.json  nav.json  numbers.json  thumb_numbers.json  user.json
cli/src/: config.rs  controller.rs  dispatcher.rs  main.rs
cli/src/controller/: applescript.rs  autopilot.rs  enigo.rs
input/: Cargo.toml
input/src/: lib.rs  machine.rs  raw_stroke.rs
lookup/: Cargo.toml
lookup/src/: load.rs  main.rs
plojo_core/: Cargo.toml
plojo_core/src/: commands.rs  lib.rs  output.rs  stroke.rs
plojo_input/: Cargo.toml
plojo_input/src/: raw_stroke.rs
plojo_input_geminipr/: Cargo.toml
plojo_input_geminipr/src/: lib.rs  machine.rs  raw_stroke.rs
plojo_input_keyboard/: Cargo.toml
plojo_input_keyboard/src/: lib.rs
plojo_input_stdin/: Cargo.toml
plojo_input_stdin/src/: lib.rs
plojo_output_applescript/: Cargo.toml
plojo_output_applescript/src/: lib.rs
plojo_output_autopilot/: Cargo.toml
plojo_output_autopilot/src/: lib.rs
plojo_output_enigo/: Cargo.toml
plojo_output_enigo/src/: lib.rs
plojo_output_macos/: Cargo.toml
plojo_output_macos/src/: lib.rs
plojo_standard/: Cargo.toml
plojo_standard/src/: dictionary.rs  diff.rs  lib.rs
plojo_standard/src/dictionary/: load.rs  translate.rs
plojo_standard/src/diff/: parser.rs
plojo_standard/src/diff/parser/: orthography.rs
plojo_standard/tests/: standard_translator.rs
plojo_translator/: Cargo.toml
plojo_translator/src/: dictionary.rs  diff.rs
plojo_translator/src/dictionary/: load.rs
plojo_translator/src/diff/: parser.rs
plojo_translator/src/diff/parser/: american_english_words.txt
plojo_translator/tests/: standard_translator.rs
plover_convert/: Cargo.toml
plover_convert/src/: main.rs
runtime_files/: dict.json  fingerspelling.json  user.json
src/: bin.rs  commands.rs  dispatcher.rs  lib.rs  machine.rs  stroke.rs  testing_resources.rs  translator.rs
src/dispatcher/: controller.rs  mod.rs
src/load/: dictionary.rs  mod.rs
src/machine/: mod.rs  raw_stroke.rs
src/translator/: dictionary.rs  diff.rs  lookup.rs  mod.rs  standard.rs  translate.rs
src/translator/diff/: mod.rs  orthography.rs  parser.rs
src/translator/standard/: dictionary.rs  diff.rs
src/translator/standard/dictionary/: load.rs  translate.rs
src/translator/standard/diff/: parser.rs
standard/: Cargo.toml
standard/src/: dictionary.rs  diff.rs  lib.rs
standard/src/dictionary/: load.rs  translate.rs
standard/src/diff/: parser.rs
standard/tests/: standard_translator.rs
telemetry/: Cargo.toml
telemetry/src/: frequency.rs  main.rs  parsed.rs  processor.rs  raw.rs
tests/: standard_translator.rs
translator/: Cargo.toml
translator/src/: base.rs  commands.rs  lib.rs
