[package]
name = "plojo"
version = "0.1.0"
authors = ["Richard Liu <richy.liu.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"

[lib]
name = "plojo_lib"
path = "src/lib.rs"

[[bin]]
name = "plojo_run"
path = "src/bin.rs"
