[package]
name = "plojo"
version = "0.1.0"
authors = ["Richard Liu <richy.liu.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
enigo = "0.0.14"
serde_json = "1.0.59"
regex = "1.4.2"
lazy_static = "1.4.0"

[lib]
name = "plojo_lib"
path = "src/lib.rs"

[[bin]]
name = "plojo_run"
path = "src/bin.rs"
