[package]
name = "cli"
version = "0.1.0"
authors = ["Richard Liu <richy.liu.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plojo_input = { path = "../plojo_input" }
plojo_core = { path = "../plojo_core" }
plojo_standard = { path = "../plojo_standard" }
enigo = "0.0.14"
chrono = "0.4.19"
