[package]
name = "cli"
version = "0.1.0"
authors = ["Richard Liu <richy.liu.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plojo_input_geminipr = { path = "../plojo_input_geminipr" }
plojo_input_stdin = { path = "../plojo_input_stdin" }
plojo_core = { path = "../plojo_core" }
plojo_standard = { path = "../plojo_standard" }
plojo_output_macos = { path = "../plojo_output_macos" }
chrono = "0.4.19"
clap = "2.33.3"
