[package]
name = "plojo_standard"
version = "0.1.0"
authors = ["Richard Liu <richy.liu.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plojo_core = { path = "../plojo_core" }
serde_json = "1.0.59"
regex = "1.4.2"
lazy_static = "1.4.0"
