[package]
name = "telemetry"
version = "0.1.0"
authors = ["Richard Liu <richy.liu.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
chrono = "0.4.19"
lazy_static = "1.4.0"
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
